collect(Collectors.toList()) changed to toList() for Sonarqube